--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 :root {
     --primary: rgb(221, 113, 9);
     --secondary: #777777;
-    --light: #F8F8F8;
     --dark: #252525;
     --orange:rgb(221, 113, 9);
     --black: #000;
@@ -110,9 +109,13 @@
     outline: none;
 }
 
+.nav-link.active {
+  color:black;
+}
+
 .navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active {
-    color: var(--dark);
+.navbar .navbar-nav  {
+    color: rgb(221, 113, 9);
 }
 
 .navbar.sticky-top {
@@ -121,7 +124,7 @@
 }
 
 .navbar-nav .nav-link:hover {
-  color: #000;
+  color: rgb(221, 113, 9);
 }
 
 .dropdown-menu {
@@ -488,7 +491,6 @@
     border-color: rgb(221, 113, 9);
     background: rgb(221, 113, 9);
 }
-
 
 /*** Footer ***/
 .footer .btn.btn-link {
@@ -886,6 +888,7 @@ padding: 0px 120px 0px 120px;
   position: sticky;
   top: 120px;
   max-width: 700px;
+  padding-top: 150px;
 }
 
 .center-content {
@@ -1025,7 +1028,7 @@ padding: 0px 120px 0px 120px;
 /* ===========================
    HEADING SIZE ADJUSTMENTS
 =========================== */
-.sticky-content h1{
+.sticky-content  h1{
   font-weight:900;
   margin-bottom: 6px;
 }
@@ -1300,6 +1303,7 @@ padding: 0px 120px 0px 120px;
 
   .sticky-content {
     padding-left: 0 !important;
+    padding-top: 0 !important;
   }
 }
 
@@ -1881,6 +1885,13 @@ section {
 }
 
 
+.nav-link a {
+color:black;
+}
+
+.nav-link a:hover{
+  color:rgb(221, 113, 9)
+}
 
 
 
