--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,15 @@
   background: rgb(221, 113, 9);
 }
 
+/* Mobile dropdown fix */
+@media (max-width: 991px) {
+  .navbar .dropdown-menu {
+    position: static;
+    box-shadow: none;
+    width: 100%;
+  }
+}
+
 
 
 @media (max-width: 991.98px) {
@@ -1113,7 +1122,6 @@ padding: 0px 120px 0px 120px;
   margin-bottom: 30px;
 }
 
-  
 /* ===========================
    ORANGE BORDER HOVER EFFECT
 =========================== */
@@ -1122,19 +1130,11 @@ padding: 0px 120px 0px 120px;
   box-shadow: 0 0 0 2px rgba(255, 122, 0, 0.15);
 }
 
-
-
-
 /* ===========================
    LEFT SECTION PADDING
 =========================== */
 .sticky-scroll-section {
   padding-left: 60px;     /* main left padding */
-}
-
-/* extra control for left content */
-.sticky-content.left-gap {
-  /* padding-left: 80px; */
 }
 
 /* ======================================
@@ -1857,11 +1857,9 @@ section {
   }
 }
 
-
 /* responsive top down slider */
 
  /* spinner responsive */
-
 
 /* Desktop */
 .spinner-img {
@@ -1885,8 +1883,7 @@ section {
     max-width: 40px;
   }
 }
-
-
+/* Navigation link color */
 .nav-link a {
 color:black;
 }
